--- a/index.html
+++ b/index.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
+     <title>Главная страница</title>
+     <link rel="stylesheet" href="style/styles.css">
 </head>
 
 <body>
-     sdjkfhghk
+     <header class="header">
+          <h1>Мой сайт</h1>
+     </header>
+
+     <nav class="navigation">
+          <ul>
+               <li><a href="index.html">Главная</a></li>
+               <li><a href="pages/news.html">Новости</a></li>
+               <li><a href="pages/practices.html">Практики</a></li>
+               <li><a href="pages/goods.html">Товары</a></li>
+               <li><a href="pages/contacts.html">Контакты</a></li>
+          </ul>
+     </nav>
+
+     <main class="main-content">
+          <section class="author-info">
+               <h2>Информация об авторе</h2>
+               <img src="images/tema.jpg" alt="Фото автора" class="author-photo">
+               <p class="author-name">Кокоев Артем</p>
+               <p class="study-group">Группа: ЭФБО-18-24</p>
+
+               <div class="about-me">
+                    <h3>Обо мне</h3>
+                    <p>Студент направления "Информационные технологии", изучаю фронтенд и бэкенд разработку.</p>
+               </div>
+
+               <div class="skills">
+                    <h3>Мои навыки</h3>
+                    <div class="skills-grid">
+                         <div class="skill-item">HTML/CSS</div>
+                         <div class="skill-item">JavaScript</div>
+                         <div class="skill-item">Python</div>
+                         <div class="skill-item">Git</div>
+                    </div>
+               </div>
+
+               <div class="experience">
+                    <h3>Мой опыт</h3>
+                    <ul>
+                         <li>Изучение основ веб-разработки</li>
+                         <li>Создание простых веб-страниц</li>
+                         <li>Работа с системой контроля версий Git</li>
+                         <li>Практика на учебных проектах</li>
+                    </ul>
+               </div>
+          </section>
+     </main>
+
+     <footer class="footer">
+          <p>&copy; 2025 Кокоев Артем. Все права защищены.</p>
+     </footer>
 </body>
 
 </html>
