--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                <p class="author-name">Кокоев Артем</p>
                <p class="study-group">Группа: ЭФБО-18-24</p>
 
+               <button id="openDialog" type="button" class="button button--primary">Написать нам</button>
+              
                <div class="about-me">
                     <h3>Обо мне</h3>
                     <p>Студент направления "Информационные технологии", изучаю фронтенд и бэкенд разработку.</p>
