--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Главная страница</title>
      <link rel="stylesheet" href="style/styles.css">
+     <link rel="main.js" href="./main.js">
 </head>
 
 <body>
