--- a/index.html
+++ b/index.html
@@ -4,65 +4,201 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Главная страница</title>
+     <title>Главная - Портфолио</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
      <link rel="stylesheet" href="style/styles.css">
 </head>
 
-<body>
-     <header class="header">
-          <h1>Мой сайт</h1>
-     </header>
-
-     <nav class="navigation">
-          <ul>
-               <li><a href="index.html">Главная</a></li>
-               <li><a href="pages/news.html">Новости</a></li>
-               <li><a href="pages/practices.html">Практики</a></li>
-               <li><a href="pages/goods.html">Товары</a></li>
-               <li><a href="pages/contacts.html">Контакты</a></li>
-          </ul>
-     </nav>
-
-     <main class="main-content">
-          <section class="author-info">
-               <h2>Информация об авторе</h2>
-               <img src="images/tema.jpg" alt="Фото автора" class="author-photo">
-               <p class="author-name">Кокоев Артем</p>
-               <p class="study-group">Группа: ЭФБО-18-24</p>
-
-               <button id="openDialog" type="button" class="button button--primary">Написать нам</button>
-              
-               <div class="about-me">
-                    <h3>Обо мне</h3>
-                    <p>Студент направления "Информационные технологии", изучаю фронтенд и бэкенд разработку.</p>
-               </div>
-
-               <div class="skills">
-                    <h3>Мои навыки</h3>
-                    <div class="skills-grid">
-                         <div class="skill-item">HTML/CSS</div>
-                         <div class="skill-item">JavaScript</div>
-                         <div class="skill-item">Python</div>
-                         <div class="skill-item">Git</div>
+<body class="page bg-light">
+     <div class="container-fluid p-0">
+          <!-- Header -->
+          <header class="header bg-primary text-white py-4">
+               <div class="container">
+                    <div class="row align-items-center">
+                         <div class="col">
+                              <h1 class="header__title h3 mb-1">Портфолио студента</h1>
+                              <p class="header__subtitle mb-0 opacity-75">Веб-разработчик</p>
+                         </div>
+                         <div class="col-auto">
+                              <span class="badge bg-light text-primary">ЭФБО-18-24</span>
+                         </div>
                     </div>
                </div>
+          </header>
 
-               <div class="experience">
-                    <h3>Мой опыт</h3>
-                    <ul>
-                         <li>Изучение основ веб-разработки</li>
-                         <li>Создание простых веб-страниц</li>
-                         <li>Работа с системой контроля версий Git</li>
-                         <li>Практика на учебных проектах</li>
-                    </ul>
+          <!-- Navigation -->
+          <nav class="nav navbar navbar-expand-lg navbar-dark bg-dark">
+               <div class="container">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                         <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                         <ul class="nav__list navbar-nav">
+                              <li class="nav__item nav__item--active nav-item">
+                                   <a class="nav__link nav-link active" href="index.html">
+                                        <i class="bi bi-house me-1"></i>Главная
+                                   </a>
+                              </li>
+                              <li class="nav__item nav-item">
+                                   <a class="nav__link nav-link" href="pages/news.html">
+                                        <i class="bi bi-newspaper me-1"></i>Новости
+                                   </a>
+                              </li>
+                              <li class="nav__item nav-item">
+                                   <a class="nav__link nav-link" href="pages/practices.html">
+                                        <i class="bi bi-code-slash me-1"></i>Практики
+                                   </a>
+                              </li>
+                              <li class="nav__item nav-item">
+                                   <a class="nav__link nav-link" href="pages/goods.html">
+                                        <i class="bi bi-cart me-1"></i>Товары
+                                   </a>
+                              </li>
+                              <li class="nav__item nav-item">
+                                   <a class="nav__link nav-link" href="pages/contacts.html">
+                                        <i class="bi bi-telephone me-1"></i>Контакты
+                                   </a>
+                              </li>
+                         </ul>
+                    </div>
                </div>
-          </section>
-     </main>
+          </nav>
 
-     <footer class="footer">
-          <p>&copy; 2025 Кокоев Артем. Все права защищены.</p>
-     </footer>
+          <!-- Main Content -->
+          <main class="main container my-4">
+               <!-- Profile Section -->
+               <section class="profile mb-4">
+                    <div class="card">
+                         <div class="card-body p-4">
+                              <div class="row align-items-center">
+                                   <div class="col-md-3 text-center mb-3 mb-md-0">
+                                        <img src="images/tema.jpg" alt="Фото студента"
+                                             class="profile__photo img-fluid rounded-circle"
+                                             style="width: 150px; height: 150px; object-fit: cover;">
+                                   </div>
+                                   <div class="col-md-9">
+                                        <h2 class="profile__name card-title h4 text-primary">Кокоев Артем</h2>
+                                        <p class="profile__group card-text text-muted mb-2">
+                                             <i class="bi bi-bookmark-check-fill text-primary"></i>
+                                             Студент группы ЭФБО-18-24
+                                        </p>
+                                        <p class="profile__description card-text">
+                                             Факультет информационных технологий, изучаю фронтенд и бэкенд разработку.
+                                        </p>
+                                        <div class="profile__actions mb-3">
+                                             <button id="openDialog" type="button"
+                                                  class="button button--primary btn btn-primary">
+                                                  <i class="bi bi-envelope me-1"></i>Написать нам
+                                             </button>
+                                        </div>
+                                        <div class="d-flex gap-2 flex-wrap">
+                                             <span class="badge bg-primary">HTML/CSS</span>
+                                             <span class="badge bg-success">JavaScript</span>
+                                             <span class="badge bg-info">Python</span>
+                                             <span class="badge bg-warning">Git</span>
+                                        </div>
+                                   </div>
+                              </div>
+                         </div>
+                    </div>
+               </section>
 
+               <!-- About Section -->
+               <section class="about mb-4">
+                    <div class="card">
+                         <div class="card-body">
+                              <h3 class="card-title">Обо мне</h3>
+                              <p class="card-text">
+                                   Студент направления "Информационные технологии", изучаю фронтенд и бэкенд разработку.
+                                   Интересуюсь веб-разработкой и созданием пользовательских интерфейсов.
+                              </p>
+                         </div>
+                    </div>
+               </section>
+
+               <!-- Skills Section -->
+               <section class="skills mb-4">
+                    <div class="card">
+                         <div class="card-body">
+                              <h3 class="card-title">Мои навыки</h3>
+                              <div class="d-flex gap-2 flex-wrap">
+                                   <span class="badge bg-primary">HTML/CSS</span>
+                                   <span class="badge bg-success">JavaScript</span>
+                                   <span class="badge bg-info">Python</span>
+                                   <span class="badge bg-warning">Git</span>
+                                   <span class="badge bg-secondary">Bootstrap</span>
+                              </div>
+                         </div>
+                    </div>
+               </section>
+
+               <!-- Experience Section -->
+               <section class="experience mb-4">
+                    <div class="card">
+                         <div class="card-body">
+                              <h3 class="card-title">Мой опыт</h3>
+                              <ul>
+                                   <li>Изучение основ веб-разработки</li>
+                                   <li>Создание простых веб-страниц</li>
+                                   <li>Работа с системой контроля версий Git</li>
+                                   <li>Практика на учебных проектах</li>
+                              </ul>
+                         </div>
+                    </div>
+               </section>
+
+               <!-- Projects Section -->
+               <section class="projects mb-4">
+                    <div class="card">
+                         <div class="card-body">
+                              <h3 class="card-title">Мои проекты</h3>
+                              <div class="row g-3">
+                                   <div class="col-md-6">
+                                        <div class="card">
+                                             <div class="card-body">
+                                                  <h5 class="card-title">Личный сайт</h5>
+                                                  <p class="card-text text-muted">
+                                                       Сайт-портфолио на HTML, CSS и Bootstrap.
+                                                  </p>
+                                             </div>
+                                        </div>
+                                   </div>
+                                   <div class="col-md-6">
+                                        <div class="card">
+                                             <div class="card-body">
+                                                  <h5 class="card-title">Учебные практики</h5>
+                                                  <p class="card-text text-muted">
+                                                       Выполненные учебные задания и проекты.
+                                                  </p>
+                                             </div>
+                                        </div>
+                                   </div>
+                              </div>
+                         </div>
+                    </div>
+               </section>
+          </main>
+
+          <!-- Footer -->
+          <footer class="footer bg-dark text-white py-4 mt-5">
+               <div class="container">
+                    <div class="row align-items-center">
+                         <div class="col-md-6">
+                              <p class="footer__text mb-0">&copy; 2025 Кокоев Артем. Все права защищены.</p>
+                         </div>
+                         <div class="col-md-6 text-md-end">
+                              <a href="pages/contacts.html"
+                                   class="footer__link text-white text-decoration-none me-3">Контакты</a>
+                              <a href="#" class="footer__link text-white text-decoration-none">Политика
+                                   конфиденциальности</a>
+                         </div>
+                    </div>
+               </div>
+          </footer>
+     </div>
+
+     <!-- Contact Dialog -->
      <dialog id="contactDialog" aria-labelledby="dialogTitle" class="dialog">
           <h2 id="dialogTitle" class="dialog__title">Обратная связь</h2>
 
@@ -100,12 +236,14 @@
                <small id="messageHelp" class="form__help">Опишите ваш вопрос подробно</small>
 
                <div class="form__actions">
-                    <button type="button" id="closeDialog" class="button button--secondary">Закрыть</button>
-                    <button type="submit" class="button button--primary">Отправить</button>
+                    <button type="button" id="closeDialog"
+                         class="button button--secondary btn btn-secondary">Закрыть</button>
+                    <button type="submit" class="button button--primary btn btn-primary">Отправить</button>
                </div>
           </form>
      </dialog>
 
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
      <script src="main.js"></script>
 </body>
 
