--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,55 +1,136 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Товары</title>
+    <title>Товары - Портфолио</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style/styles.css">
 </head>
-
-<body>
-    <header class="header">
-        <h1>Мой сайт</h1>
-    </header>
-
-    <nav class="navigation">
-        <ul>
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </nav>
-
-    <main class="main-content">
-        <h2>Товары</h2>
-
-        <div class="goods-grid">
-            <div class="goods-item">
-                <img src="../images/pesik.jpg" alt="Товар 1" class="goods-image">
-                <h3>Ноутбук для разработки</h3>
-                <p class="price">₽85,000</p>
+<body class="page bg-light">
+    <div class="container-fluid p-0">
+        <!-- Header -->
+        <header class="header bg-primary text-white py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h1 class="header__title h3 mb-1">Портфолио студента</h1>
+                        <p class="header__subtitle mb-0 opacity-75">Товары и услуги</p>
+                    </div>
+                    <div class="col-auto">
+                        <span class="badge bg-light text-primary">ЭФБО-18-24</span>
+                    </div>
+                </div>
             </div>
+        </header>
 
-            <div class="goods-item">
-                <img src="../images/zavod.jpg" alt="Товар 2" class="goods-image">
-                <h3>Механическая клавиатура</h3>
-                <p class="price">₽12,500</p>
+        <!-- Navigation -->
+        <nav class="nav navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="nav__list navbar-nav">
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="../index.html">
+                                <i class="bi bi-house me-1"></i>Главная
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="news.html">
+                                <i class="bi bi-newspaper me-1"></i>Новости
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="practices.html">
+                                <i class="bi bi-code-slash me-1"></i>Практики
+                            </a>
+                        </li>
+                        <li class="nav__item nav__item--active nav-item">
+                            <a class="nav__link nav-link active" href="goods.html">
+                                <i class="bi bi-cart me-1"></i>Товары
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="contacts.html">
+                                <i class="bi bi-telephone me-1"></i>Контакты
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
 
-            <div class="goods-item">
-                <img src="../images/egorKrid.jpg" alt="Товар 3" class="goods-image">
-                <h3>Монитор 4K</h3>
-                <p class="price">₽35,000</p>
+        <!-- Main Content -->
+        <main class="main container my-4">
+            <div class="goods">
+                <div class="mb-4">
+                    <h2 class="h4">Товары</h2>
+                    <p>Полезные товары для веб-разработки</p>
+                </div>
+
+                <div class="row g-3">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="../images/pesik.jpg" alt="Ноутбук для разработки" class="card-img-top" style="height: 200px; object-fit: cover;">
+                            <div class="card-body">
+                                <h5 class="card-title">Ноутбук для разработки</h5>
+                                <p class="card-text text-muted">
+                                    Ноутбук для комфортной разработки
+                                </p>
+                                <p class="h5 text-danger">₽85,000</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="../images/zavod.jpg" alt="Механическая клавиатура" class="card-img-top" style="height: 200px; object-fit: cover;">
+                            <div class="card-body">
+                                <h5 class="card-title">Механическая клавиатура</h5>
+                                <p class="card-text text-muted">
+                                    Клавиатура с подсветкой
+                                </p>
+                                <p class="h5 text-danger">₽12,500</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="../images/egorKrid.jpg" alt="Монитор 4K" class="card-img-top" style="height: 200px; object-fit: cover;">
+                            <div class="card-body">
+                                <h5 class="card-title">Монитор 4K</h5>
+                                <p class="card-text text-muted">
+                                    Монитор для разработки
+                                </p>
+                                <p class="h5 text-danger">₽35,000</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <footer class="footer">
-        <p>&copy; 2025 Кокоев Артем. Все права защищены.</p>
-    </footer>
+        <!-- Footer -->
+        <footer class="footer bg-dark text-white py-4 mt-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <p class="footer__text mb-0">&copy; 2025 Кокоев Артем. Все права защищены.</p>
+                    </div>
+                    <div class="col-md-6 text-md-end">
+                        <a href="contacts.html" class="footer__link text-white text-decoration-none me-3">Контакты</a>
+                        <a href="#" class="footer__link text-white text-decoration-none">Политика конфиденциальности</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
