--- a/pages/news.html
+++ b/pages/news.html
@@ -3,48 +3,179 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости</title>
+    <title>Новости - Портфолио</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style/styles.css">
 </head>
-<body>
-    <header class="header">
-        <h1>Мой сайт</h1>
-    </header>
+<body class="page bg-light">
+    <div class="container-fluid p-0">
+        <!-- Header -->
+        <header class="header bg-primary text-white py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h1 class="header__title h3 mb-1">Портфолио студента</h1>
+                        <p class="header__subtitle mb-0 opacity-75">Новости и события</p>
+                    </div>
+                    <div class="col-auto">
+                        <span class="badge bg-light text-primary">ЭФБО-18-24</span>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-    <nav class="navigation">
-        <ul>
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </nav>
+        <!-- Navigation -->
+        <nav class="nav navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="nav__list navbar-nav">
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="../index.html">
+                                <i class="bi bi-house me-1"></i>Главная
+                            </a>
+                        </li>
+                        <li class="nav__item nav__item--active nav-item">
+                            <a class="nav__link nav-link active" href="news.html">
+                                <i class="bi bi-newspaper me-1"></i>Новости
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="practices.html">
+                                <i class="bi bi-code-slash me-1"></i>Практики
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="goods.html">
+                                <i class="bi bi-cart me-1"></i>Товары
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="contacts.html">
+                                <i class="bi bi-telephone me-1"></i>Контакты
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-    <main class="main-content">
-        <h2>Новости</h2>
-        
-        <article class="news-item">
-            <h3>Обновление учебной программы</h3>
-            <p class="news-meta">22 сентября 2025 | Администрация</p>
-            <p>В новом семестре добавлены современные технологии веб-разработки для более эффективного изучения фронтенда и бэкенда.</p>
-        </article>
+        <!-- Main Content -->
+        <main class="main container my-4">
+            <div class="news">
+                <div class="mb-4">
+                    <h2>Новости</h2>
+                </div>
 
-        <article class="news-item">
-            <h3>Новые возможности GitHub Pages</h3>
-            <p class="news-meta">20 сентября 2025 | Преподаватель</p>
-            <p>GitHub Pages теперь поддерживает автоматическое развертывание из основной ветки репозитория. Это упрощает публикацию проектов.</p>
-        </article>
+                <div class="news__list">
+                    <article class="card mb-3">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <small class="text-muted">22 сентября 2025</small>
+                                <span class="badge bg-info">Администрация</span>
+                            </div>
+                            <h3 class="card-title h5">Обновление учебной программы</h3>
+                            <p class="card-text">
+                                В новом семестре добавлены современные технологии веб-разработки.
+                            </p>
+                        </div>
+                    </article>
 
-        <article class="news-item">
-            <h3>Практическое занятие по CSS</h3>
-            <p class="news-meta">18 сентября 2025 | Кафедра</p>
-            <p>На следующем занятии мы изучим основы CSS для стилизации веб-страниц и создания адаптивного дизайна.</p>
-        </article>
-    </main>
+                    <article class="card mb-3">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <small class="text-muted">20 сентября 2025</small>
+                                <span class="badge bg-success">Преподаватель</span>
+                            </div>
+                            <h3 class="card-title h5">Новые возможности GitHub Pages</h3>
+                            <p class="card-text">
+                                GitHub Pages теперь поддерживает автоматическое развертывание.
+                            </p>
+                        </div>
+                    </article>
 
-    <footer class="footer">
-        <p>&copy; 2025 Кокоев Артем. Все права защищены.</p>
-    </footer>
+                    <article class="card mb-3">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <small class="text-muted">18 сентября 2025</small>
+                                <span class="badge bg-warning">Кафедра</span>
+                            </div>
+                            <h3 class="card-title h5">Практическое занятие по CSS</h3>
+                            <p class="card-text">
+                                На следующем занятии изучим основы CSS и адаптивный дизайн.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="card mb-3">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <small class="text-muted">15 сентября 2025</small>
+                                <span class="badge bg-success">Преподаватель</span>
+                            </div>
+                            <h3 class="card-title h5">Введение в JavaScript</h3>
+                            <p class="card-text">
+                                Начинаем изучение основ JavaScript - языка программирования для веб-разработки.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="card mb-3">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <small class="text-muted">12 сентября 2025</small>
+                                <span class="badge bg-info">Администрация</span>
+                            </div>
+                            <h3 class="card-title h5">Расписание занятий обновлено</h3>
+                            <p class="card-text">
+                                Опубликовано актуальное расписание практических занятий на осенний семестр.
+                            </p>
+                        </div>
+                    </article>
+                </div>
+
+                <!-- Пагинация -->
+                <nav class="news__pagination mt-5" aria-label="Навигация по новостям">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item disabled">
+                            <span class="page-link">Предыдущая</span>
+                        </li>
+                        <li class="page-item active">
+                            <span class="page-link">1</span>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">2</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">3</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">Следующая</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="footer bg-dark text-white py-4 mt-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <p class="footer__text mb-0">&copy; 2025 Кокоев Артем. Все права защищены.</p>
+                    </div>
+                    <div class="col-md-6 text-md-end">
+                        <a href="contacts.html" class="footer__link text-white text-decoration-none me-3">Контакты</a>
+                        <a href="#" class="footer__link text-white text-decoration-none">Политика конфиденциальности</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
