--- a/pages/practices.html
+++ b/pages/practices.html
@@ -3,31 +3,293 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практики</title>
+    <title>Практики - Портфолио</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../style/styles.css">
 </head>
-<body>
-    <header class="header">
-        <h1>Мой сайт</h1>
-    </header>
+<body class="page bg-light">
+    <div class="container-fluid p-0">
+        <!-- Header -->
+        <header class="header bg-primary text-white py-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h1 class="header__title h3 mb-1">Портфолио студента</h1>
+                        <p class="header__subtitle mb-0 opacity-75">Учебные практики</p>
+                    </div>
+                    <div class="col-auto">
+                        <span class="badge bg-light text-primary">ЭФБО-18-24</span>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-    <nav class="navigation">
-        <ul>
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </nav>
+        <!-- Navigation -->
+        <nav class="nav navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="nav__list navbar-nav">
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="../index.html">
+                                <i class="bi bi-house me-1"></i>Главная
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="news.html">
+                                <i class="bi bi-newspaper me-1"></i>Новости
+                            </a>
+                        </li>
+                        <li class="nav__item nav__item--active nav-item">
+                            <a class="nav__link nav-link active" href="practices.html">
+                                <i class="bi bi-code-slash me-1"></i>Практики
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="goods.html">
+                                <i class="bi bi-cart me-1"></i>Товары
+                            </a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a class="nav__link nav-link" href="contacts.html">
+                                <i class="bi bi-telephone me-1"></i>Контакты
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-    <main class="main-content">
-        <h2>Практики</h2>
-        <p>Раздел в разработке. Здесь будут размещены материалы по практическим занятиям.</p>
-    </main>
+        <!-- Main Content -->
+        <main class="main container my-4">
+            <div class="practices">
+                <div class="practices__header card shadow-sm mb-4">
+                    <div class="card-header bg-light">
+                        <h2 class="practices__title card-title h4 mb-0">
+                            <i class="bi bi-code-slash text-primary"></i>
+                            Учебные практики
+                        </h2>
+                    </div>
+                    <div class="card-body">
+                        <p class="practices__description card-text">
+                            Коллекция выполненных практических работ и заданий по курсу "Фронтенд и бэкенд разработка"
+                        </p>
+                    </div>
+                </div>
 
-    <footer class="footer">
-        <p>&copy; 2025 Кокоев Артем. Все права защищены.</p>
-    </footer>
+                <!-- Список практик -->
+                <div class="practices__grid row g-4">
+                    <!-- Практика 1 -->
+                    <div class="col-lg-6">
+                        <div class="practice-card card shadow-sm h-100">
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <span class="badge bg-success">
+                                    <i class="bi bi-check-circle"></i> Завершено
+                                </span>
+                                <span class="badge bg-primary">HTML/CSS</span>
+                            </div>
+                            <div class="card-body">
+                                <h3 class="practice-card__title card-title h5">
+                                    <i class="bi bi-file-code text-primary me-2"></i>
+                                    Практика 1: Основы HTML
+                                </h3>
+                                <p class="practice-card__description card-text text-muted">
+                                    Создание базовой структуры веб-страницы с использованием семантических тегов HTML5
+                                </p>
+                                <div class="practice-card__progress mb-3">
+                                    <div class="d-flex justify-content-between mb-1">
+                                        <small>Прогресс</small>
+                                        <small>100%</small>
+                                    </div>
+                                    <div class="progress" style="height: 6px;">
+                                        <div class="progress-bar bg-success" style="width: 100%"></div>
+                                    </div>
+                                </div>
+                                <div class="practice-card__actions">
+                                    <button class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-eye"></i> Просмотр
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm">
+                                        <i class="bi bi-github"></i> Код
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Практика 2 -->
+                    <div class="col-lg-6">
+                        <div class="practice-card card shadow-sm h-100">
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <span class="badge bg-success">
+                                    <i class="bi bi-check-circle"></i> Завершено
+                                </span>
+                                <span class="badge bg-warning">CSS</span>
+                            </div>
+                            <div class="card-body">
+                                <h3 class="practice-card__title card-title h5">
+                                    <i class="bi bi-palette text-warning me-2"></i>
+                                    Практика 2: Стилизация и layout
+                                </h3>
+                                <p class="practice-card__description card-text text-muted">
+                                    Изучение CSS Grid, Flexbox и создание адаптивного дизайна
+                                </p>
+                                <div class="practice-card__progress mb-3">
+                                    <div class="d-flex justify-content-between mb-1">
+                                        <small>Прогресс</small>
+                                        <small>100%</small>
+                                    </div>
+                                    <div class="progress" style="height: 6px;">
+                                        <div class="progress-bar bg-success" style="width: 100%"></div>
+                                    </div>
+                                </div>
+                                <div class="practice-card__actions">
+                                    <button class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-eye"></i> Просмотр
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm">
+                                        <i class="bi bi-github"></i> Код
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Практика 3 -->
+                    <div class="col-lg-6">
+                        <div class="practice-card card shadow-sm h-100">
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <span class="badge bg-warning">
+                                    <i class="bi bi-clock"></i> В процессе
+                                </span>
+                                <span class="badge bg-success">JavaScript</span>
+                            </div>
+                            <div class="card-body">
+                                <h3 class="practice-card__title card-title h5">
+                                    <i class="bi bi-code-square text-success me-2"></i>
+                                    Практика 3: JavaScript основы
+                                </h3>
+                                <p class="practice-card__description card-text text-muted">
+                                    Работа с переменными, функциями, событиями и DOM-манипуляциями
+                                </p>
+                                <div class="practice-card__progress mb-3">
+                                    <div class="d-flex justify-content-between mb-1">
+                                        <small>Прогресс</small>
+                                        <small>75%</small>
+                                    </div>
+                                    <div class="progress" style="height: 6px;">
+                                        <div class="progress-bar bg-warning" style="width: 75%"></div>
+                                    </div>
+                                </div>
+                                <div class="practice-card__actions">
+                                    <button class="btn btn-outline-primary btn-sm me-2">
+                                        <i class="bi bi-play-circle"></i> Продолжить
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm">
+                                        <i class="bi bi-github"></i> Код
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Практика 4 -->
+                    <div class="col-lg-6">
+                        <div class="practice-card card shadow-sm h-100">
+                            <div class="card-header d-flex justify-content-between align-items-center">
+                                <span class="badge bg-success">
+                                    <i class="bi bi-check-circle"></i> Завершено
+                                </span>
+                                <span class="badge bg-info">Формы</span>
+                            </div>
+                            <div class="card-body">
+                                <h3 class="practice-card__title card-title h5">
+                                    <i class="bi bi-ui-checks text-info me-2"></i>
+                                    Практика 4: HTML-формы и валидация
+                                </h3>
+                                <p class="practice-card__description card-text text-muted">
+                                    Создание интерактивных форм с валидацией данных
+                                </p>
+                                <div class="practice-card__progress mb-3">
+                                    <div class="d-flex justify-content-between mb-1">
+                                        <small>Прогресс</small>
+                                        <small>100%</small>
+                                    </div>
+                                    <div class="progress" style="height: 6px;">
+                                        <div class="progress-bar bg-success" style="width: 100%"></div>
+                                    </div>
+                                </div>
+                                <div class="practice-card__actions">
+                                    <button class="btn btn-primary btn-sm me-2">
+                                        <i class="bi bi-eye"></i> Просмотр
+                                    </button>
+                                    <button class="btn btn-outline-secondary btn-sm">
+                                        <i class="bi bi-github"></i> Код
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Статистика -->
+                <div class="practices__stats mt-5">
+                    <div class="card shadow-sm">
+                        <div class="card-header bg-light">
+                            <h3 class="card-title h5 mb-0">
+                                <i class="bi bi-graph-up text-primary"></i>
+                                Статистика выполнения
+                            </h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="row text-center">
+                                <div class="col-md-4">
+                                    <div class="p-3">
+                                        <i class="bi bi-check-circle-fill text-success mb-2" style="font-size: 2rem;"></i>
+                                        <h4 class="h2 text-success">3</h4>
+                                        <p class="text-muted mb-0">Завершено</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="p-3">
+                                        <i class="bi bi-clock-fill text-warning mb-2" style="font-size: 2rem;"></i>
+                                        <h4 class="h2 text-warning">1</h4>
+                                        <p class="text-muted mb-0">В процессе</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="p-3">
+                                        <i class="bi bi-percent text-primary mb-2" style="font-size: 2rem;"></i>
+                                        <h4 class="h2 text-primary">87%</h4>
+                                        <p class="text-muted mb-0">Общий прогресс</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="footer bg-dark text-white py-4 mt-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <p class="footer__text mb-0">&copy; 2025 Кокоев Артем. Все права защищены.</p>
+                    </div>
+                    <div class="col-md-6 text-md-end">
+                        <a href="contacts.html" class="footer__link text-white text-decoration-none me-3">Контакты</a>
+                        <a href="#" class="footer__link text-white text-decoration-none">Политика конфиденциальности</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
